memory.css調整遊戲容器寬度與間距以適應4x4卡片佈局

--- a/templates/memory.html
+++ b/templates/memory.html
@@ -27,15 +27,16 @@
 
     <div class="game-container">
         <div class="info-bar">
-            <div class="stat-group">
+            <div class="stat-group left">
                 <div class="stat-box"><i class="fa-solid fa-shoe-prints"></i> <span id="moves">0</span></div>
                 <div class="stat-box"><i class="fa-regular fa-clock"></i> <span id="timer">0</span>s</div>
             </div>
 
             <button id="startBtn" class="btn-primary">START GAME</button>
             
-            <div class="stat-group" style="opacity: 0; pointer-events: none;">
-                <div class="stat-box">HIDDEN</div>
+            <div class="stat-group right" style="opacity: 0; pointer-events: none;">
+                <div class="stat-box"><i class="fa-solid fa-shoe-prints"></i> 0</div>
+                <div class="stat-box"><i class="fa-regular fa-clock"></i> 0s</div>
             </div>
         </div>
 
