--- a/templates/index.html
+++ b/templates/index.html
@@ -263,7 +263,7 @@
     
     <a href="{{ url_for('shop_page') }}" class="fixed-support-btn">
         <span class="icon">💎</span>
-        <span>Support Us</span>
+        <span>PRIZE COUNTER</span>
     </a>
 </body>
 </html>
