修復語法錯誤

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -151,6 +151,7 @@
                 <button class="filter-btn" data-filter="suspect" style="color: #fca5a5; border-color: #7f1d1d;">
                     <i class="fa-solid fa-triangle-exclamation"></i> Suspects
                 </button>
+            </div>
         </div>
 
         <div class="user-grid" id="userGrid">
