新增遊戲安全性驗證機制，透過 nonce 和 hash 檢查防止作弊，並更新前端遊戲程式碼以支援此功能。刪除不必要的資料庫檔案。

--- a/templates/dino.html
+++ b/templates/dino.html
@@ -69,6 +69,7 @@
         </div>
     </div>
 
+    <script src="{{ url_for('static', filename='security.js') }}"></script>
     <script src="{{ url_for('static', filename='dino.js') }}"></script>
 </body>
 </html>
