--- a/templates/shaft.html
+++ b/templates/shaft.html
@@ -70,6 +70,7 @@
         </div>
     </div>
 
+    <script src="{{ url_for('static', filename='security.js') }}"></script>
     <script src="{{ url_for('static', filename='shaft.js') }}"></script>
 </body>
 </html>
