--- a/templates/tetris.html
+++ b/templates/tetris.html
@@ -98,6 +98,7 @@
         </div>
     </div>
 
+    <script src="{{ url_for('static', filename='security.js') }}"></script>
     <script src="{{ url_for('static', filename='tetris.js') }}"></script>
 </body>
 </html>
