整合遊戲防作弊機制，新增管理員功能以手動解除使用者嫌疑標記，並更新前端遊戲頁面以支援新的安全性驗證邏輯。刪除不再使用的安全性相關檔案。

--- a/templates/shaft.html
+++ b/templates/shaft.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='security.js') }}"></script>
+    <script src="/dynamic/anticheat.js"></script>
     <script src="{{ url_for('static', filename='shaft.js') }}"></script>
 </body>
 </html>
