--- a/templates/snake.html
+++ b/templates/snake.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='security.js') }}"></script>
+    <script src="/dynamic/anticheat.js"></script>
     <script src="{{ url_for('static', filename='snake.js') }}"></script>
 </body>
 </html>
