--- a/templates/dino.html
+++ b/templates/dino.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='security.js') }}"></script>
+    <script src="/dynamic/anticheat.js"></script>
     <script src="{{ url_for('static', filename='dino.js') }}"></script>
 </body>
 </html>
