--- a/templates/memory.html
+++ b/templates/memory.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='security.js') }}"></script>
+    <script src="/dynamic/anticheat.js"></script>
     <script src="{{ url_for('static', filename='memory.js') }}"></script>
 </body>
 </html>
