--- a/templates/tetris.html
+++ b/templates/tetris.html
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='security.js') }}"></script>
+    <script src="/dynamic/anticheat.js"></script>
     <script src="{{ url_for('static', filename='tetris.js') }}"></script>
 </body>
 </html>
