--- a/templates/whac.html
+++ b/templates/whac.html
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='security.js') }}"></script>
+    <script src="/dynamic/anticheat.js"></script>
     <script src="{{ url_for('static', filename='whac.js') }}"></script>
 </body>
 </html>
